--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "version": "git commit -am \"Update dist for release\" && git checkout -b release && git add -f dist/",
     "postversion": "git push --tags && git checkout master && git branch -D release && git push",
     "testee": "testee test.html --browsers firefox",
-    "test": "npm run testee",
+    "test": "npm run jshint && npm run testee",
     "jshint": "jshint can-control.js can-control_test.js --config",
     "release:prerelease": "npm version prerelease && npm publish",
     "release:patch": "npm version patch && npm publish",
