--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "can-control",
-  "version": "3.0.0-pre.3",
+  "version": "3.0.0-pre.4",
   "description": "",
   "homepage": "http://canjs.com",
   "author": {
@@ -74,12 +74,12 @@
       "bit-docs-generate-readme": "^0.0.8"
     },
     "glob": {
-      "pattern": "**\/*.{js,md}",
-      "ignore": "node_modules\/**\/*"
+      "pattern": "**/*.{js,md}",
+      "ignore": "node_modules/**/*"
     },
-		"readme": {
-			"apis": "./docs/apis.json"
-		},
+    "readme": {
+      "apis": "./docs/apis.json"
+    },
     "parent": "can-control"
   }
 }
