--- a/package.json
+++ b/package.json
@@ -46,21 +46,24 @@
     "npmAlgorithm": "flat"
   },
   "dependencies": {
+    "can-compute": "^3.0.0-pre.14",
     "can-construct": "^3.0.0-pre.8",
     "can-event": "^3.0.0-pre.1",
+    "can-observation": "^3.0.0-pre.11",
     "can-util": "^3.0.0-pre.34"
   },
   "devDependencies": {
     "bit-docs": "0.0.6",
-    "jshint": "^2.9.1",
+    "can-map": "^3.0.0-pre.9",
     "cssify": "^1.0.2",
+    "done-serve": "^0.2.4",
+    "donejs-cli": "^0.9.5",
+    "generator-donejs": "^0.9.0",
+    "jshint": "^2.9.1",
     "steal": "^0.16.0",
     "steal-qunit": "^0.1.1",
     "steal-tools": "^0.16.0",
-    "testee": "^0.2.4",
-    "generator-donejs": "^0.9.0",
-    "donejs-cli": "^0.9.5",
-    "done-serve": "^0.2.4"
+    "testee": "^0.2.4"
   },
   "repository": {
     "type": "git",
