--- a/package.json
+++ b/package.json
@@ -36,16 +36,16 @@
     "npmAlgorithm": "flat"
   },
   "dependencies": {
-    "can-compute": "^3.0.0-pre.14",
-    "can-construct": "^3.0.0-pre.8",
-    "can-event": "^3.0.0-pre.1",
-    "can-observation": "^3.0.0-pre.11",
-    "can-util": "^3.0.0-pre.34"
+    "can-compute": "^3.0.4",
+    "can-construct": "^3.0.4",
+    "can-event": "^3.0.1",
+    "can-observation": "^3.0.4",
+    "can-util": "^3.1.0"
   },
   "devDependencies": {
     "bit-docs": "0.0.7",
     "can-define": "^1.0.1",
-    "can-map": "^3.0.0-pre.9",
+    "can-map": "^3.0.3",
     "done-serve": "^0.2.4",
     "donejs-cli": "^0.9.5",
     "generator-donejs": "^0.9.0",
