using can-namespace, can-types

--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "can-compute": "^3.0.4",
     "can-construct": "^3.0.4",
     "can-event": "^3.0.1",
+    "can-namespace": "1.0.0",
     "can-observation": "^3.0.4",
+    "can-types": "^0.1.0",
     "can-util": "^3.1.0"
   },
   "devDependencies": {
