--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "can-control",
   "description": "Declarative event bindings",
-  "version": "3.1.0-pre.0",
+  "version": "3.1.0-pre.1",
   "author": {
     "name": "Bitovi",
     "email": "contact@bitovi.com",
@@ -28,12 +28,12 @@
   },
   "dependencies": {
     "can-compute": "^3.1.0-pre.7",
-    "can-construct": "^3.0.4",
-    "can-event": "^3.0.1",
+    "can-construct": "^3.2.0-pre.0",
+    "can-event": "^3.5.0-pre.2",
     "can-namespace": "1.0.0",
     "can-observation": "^3.2.0-pre.10",
-    "can-types": "^1.0.1",
-    "can-util": "^3.2.2"
+    "can-types": "^1.1.0-pre.2",
+    "can-util": "^3.9.0-pre.4"
   },
   "devDependencies": {
     "bit-docs": "0.0.7",
