--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "can-event": "^3.5.0-pre.2",
     "can-namespace": "1.0.0",
     "can-observation": "^3.2.0-pre.10",
+    "can-reflect": "^1.0.0-pre.2",
     "can-types": "^1.1.0-pre.2",
     "can-util": "^3.9.0-pre.4"
   },
