--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "can-control",
   "description": "Declarative event bindings",
-  "version": "3.0.10",
+  "version": "3.1.0-pre.2",
   "author": {
     "name": "Bitovi",
     "email": "contact@bitovi.com",
@@ -27,18 +27,19 @@
     "url": "https://github.com/canjs/can-control/issues"
   },
   "dependencies": {
-    "can-compute": "^3.0.4",
-    "can-construct": "^3.0.4",
-    "can-event": "^3.0.1",
+    "can-compute": "^3.1.0-pre.7",
+    "can-construct": "^3.2.0-pre.0",
+    "can-event": "^3.5.0-pre.2",
     "can-namespace": "1.0.0",
-    "can-observation": "^3.0.4",
-    "can-types": "^1.0.1",
-    "can-util": "^3.2.2"
+    "can-observation": "^3.2.0-pre.10",
+    "can-reflect": "^1.0.0-pre.2",
+    "can-types": "^1.1.0-pre.2",
+    "can-util": "^3.9.0-pre.4"
   },
   "devDependencies": {
     "bit-docs": "0.0.7",
-    "can-define": "^1.0.1",
-    "can-map": "^3.0.3",
+    "can-define": "^1.2.0-pre.3",
+    "can-map": "^3.1.0-pre.8",
     "done-serve": "^0.2.4",
     "donejs-cli": "^0.9.5",
     "generator-donejs": "^0.9.0",
@@ -65,12 +66,12 @@
     "develop": "done-serve --static --develop --port 8080",
     "document": "bit-docs",
     "jshint": "jshint can-control.js can-control_test.js --config",
-    "postversion": "git push --tags && git checkout master && git branch -D release && git push",
+    "postversion": "git push --tags && git checkout can-reflect && git branch -D release && git push",
     "preversion": "npm test && npm run build",
     "release:major": "npm version major && npm publish",
     "release:minor": "npm version minor && npm publish",
     "release:patch": "npm version patch && npm publish",
-    "release:pre": "npm version prerelease && npm publish",
+    "release:pre": "npm version prerelease && npm publish --tag=pre",
     "test": "npm run jshint && npm run testee",
     "testee": "testee test/test.html --browsers firefox",
     "version": "git commit -am \"Update dist for release\" && git checkout -b release && git add -f dist/"
