--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "can-control",
   "description": "Declarative event bindings",
-  "version": "3.2.0-pre.0",
+  "version": "3.2.0",
   "author": {
     "name": "Bitovi",
     "email": "contact@bitovi.com",
@@ -19,7 +19,7 @@
     "can-reflect": "^1.1.0-pre.3",
     "can-types": "^1.1.0-pre.2",
     "can-util": "^3.9.0-pre.4",
-	"can-stache-key": "^0.0.2"
+    "can-stache-key": "^0.0.2"
   },
   "devDependencies": {
     "can-define": "^1.3.0-pre.1",
