--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   },
   "dependencies": {
     "can-compute": "^3.3.1",
-    "can-construct": "^3.2.0-pre.0",
-    "can-event": "^3.5.0-pre.2",
+    "can-construct": "^3.2.0",
+    "can-event": "^3.5.0",
     "can-namespace": "1.0.0",
     "can-observation": "^3.3.1",
     "can-reflect": "^1.2.1",
-    "can-types": "^1.1.0-pre.2",
-    "can-util": "^3.9.0-pre.4",
-    "can-stache-key": "^0.0.2"
+    "can-types": "^1.1.0",
+    "can-util": "^3.9.0",
+    "can-stache-key": "0.0.4"
   },
   "devDependencies": {
     "can-define": "^1.3.3",
