--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "can-reflect": "^1.2.1",
     "can-types": "^1.1.0",
     "can-util": "^3.9.0",
-    "can-stache-key": "0.0.4"
+    "can-stache-key": "^0.1.0"
   },
   "devDependencies": {
     "can-define": "^1.3.3",
