--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "can-define": "^1.3.3",
     "can-map": "^3.3.1",
+    "detect-cyclic-packages": "^1.0.0",
     "done-serve": "^1.2.0",
     "jshint": "^2.9.1",
     "steal": "^1.2.8",
@@ -53,9 +54,10 @@
     "release:minor": "npm version minor && npm publish",
     "release:patch": "npm version patch && npm publish",
     "release:pre": "npm version prerelease && npm publish --tag=pre",
-    "test": "npm run jshint && npm run testee",
+    "test": "npm run detect-cycle && npm run jshint && npm run testee",
     "testee": "testee test/test.html --browsers firefox",
-    "version": "git commit -am \"Update dist for release\" && git checkout -b release && git add -f dist/"
+    "version": "git commit -am \"Update dist for release\" && git checkout -b release && git add -f dist/",
+    "detect-cycle": "detect-cyclic-packages"
   },
   "steal": {
     "configDependencies": [
