--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "url": "https://github.com/canjs/can-control/issues"
   },
   "dependencies": {
+    "can-assign": "^1.1.1",
     "can-construct": "^3.2.0",
+    "can-event-queue": "^0.13.3",
     "can-namespace": "1.0.0",
     "can-observation": "^4.0.0-pre.0",
     "can-reflect": "^1.6.0",
