Make can-event-queue’s semver range <2.0.0

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "can-assign": "^1.1.1",
     "can-construct": "^3.2.0",
-    "can-event-queue": "^0.13.3",
+    "can-event-queue": "<2.0.0",
     "can-namespace": "1.0.0",
     "can-observation": "^4.0.0-pre.0",
     "can-reflect": "^1.6.0",
