--- a/.jshintrc
+++ b/.jshintrc
@@ -21,7 +21,8 @@
 		"start": true,
 		"stop": true,
 		"global": true,
-		"Promise": true
+		"Promise": true,
+		"WeakMap": true
 	},
 	"strict": false,
 	"curly": true,
