--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
     "can-dom-mutate": "<2.0.0",
     "can-event-queue": "<2.0.0",
     "can-namespace": "1.0.0",
-    "can-observation": "^4.0.0-pre.0",
+    "can-observation": "^4.0.0",
     "can-reflect": "^1.6.0",
-    "can-stache-key": "^1.0.0-pre.2",
+    "can-stache-key": "^1.0.0",
     "can-symbol": "^1.0.0",
     "can-util": "^3.9.0"
   },
   "devDependencies": {
-    "can-define": "^2.0.0-pre.1",
-    "can-simple-map": "^4.0.0-pre.0",
-    "can-simple-observable": "^2.0.0-pre.7",
+    "can-define": "^2.0.0",
+    "can-simple-map": "^4.0.0",
+    "can-simple-observable": "^2.0.0",
     "can-queues": "<2.0.0",
     "detect-cyclic-packages": "^1.1.0",
     "done-serve": "^1.2.0",
