--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "can-simple-observable": "^2.0.0",
     "can-queues": "<2.0.0",
     "detect-cyclic-packages": "^1.1.0",
-    "done-serve": "^1.2.0",
     "jshint": "^2.9.1",
     "steal": "^1.2.8",
     "steal-qunit": "^1.0.1",
@@ -49,7 +48,6 @@
     "url": "git://github.com/canjs/can-control.git"
   },
   "scripts": {
-    "develop": "done-serve --static --develop --port 8080",
     "jshint": "jshint can-control.js can-control_test.js --config",
     "preversion": "npm test",
     "postpublish": "git push --tags && git push",
@@ -59,11 +57,6 @@
     "release:pre": "npm version prerelease && npm publish --tag=pre",
     "test": "npm run detect-cycle && npm run jshint && npm run testee",
     "testee": "testee test/test.html --browsers firefox",
-    "detect-cycle": "detect-cyclic-packages --ignore done-serve"
-  },
-  "steal": {
-    "configDependencies": [
-      "live-reload"
-    ]
+    "detect-cycle": "detect-cyclic-packages"
   }
 }
