--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "can-dom-events": "^1.1.0",
     "can-dom-mutate": "<2.0.0",
     "can-event-queue": "<2.0.0",
-    "can-key": "^0.5.0",
+    "can-key": "<2.0.0",
     "can-log": "^1.0.0",
     "can-namespace": "1.0.0",
     "can-observation": "^4.0.0",
     "can-reflect": "^1.6.0",
     "can-stache-key": "^1.0.0",
-    "can-string": "0.0.5",
+    "can-string": "<2.0.0",
     "can-symbol": "^1.0.0"
   },
   "devDependencies": {
