--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "can-control",
   "description": "Declarative event bindings",
-  "version": "4.4.2",
+  "version": "5.0.0-pre.0",
   "author": {
     "name": "Bitovi",
     "email": "contact@bitovi.com",
