--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "can-queues": "<2.0.0",
     "can-simple-map": "^4.0.0",
     "can-simple-observable": "^2.0.0",
-    "can-util": "^3.9.0",
+    "can-fragment": "^1.3.1",
     "detect-cyclic-packages": "^1.1.0",
     "jshint": "^2.9.1",
     "steal": "^1.2.8",
